# Estimated-work-PPOIS

./: report.docx
knowledge-base/examples/plugin/actions/: action_search_paid_plugins.scs
knowledge-base/examples/plugin/agents/agent_for_searching_paid_plugins/: agent_program_for_searching_paid_plugins.scs  sc_agent_for_searching_paid_plugins.scs  ui_menu_for_searching_paid_plugins.scs
knowledge-base/examples/plugin/concepts/classes/: concept_extension_store.scs  concept_host.scs  concept_plugin.scs  concept_price.scs  concept_user.scs
knowledge-base/examples/plugin/concepts/relations/: nrel_cost.scs  (+9 more)
knowledge-base/examples/plugin/entities/: extension_stores.scs  hosts.scs  plugins.scs  prices.scs  users.scs
knowledge-base/examples/plugin/templates/: template_for_main_extension_store_for_users_browsers.scs  template_for_searching_available_plugins.scs  template_for_searching_extension_store_where_from_plugin_was_downloaded.scs  template_for_searching_loading_plugins.scs  template_for_searching_price_for_users_plugin.scs
knowledge-base/examples/subject_domain_of_restaurant/actions/: action_build_weekly_schedule.scs  action_import_staff_from_csv.scs
knowledge-base/ui_menu/: ui_menu_na_example_commands.scs
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/scheduling-module/: CMakeLists.txt  README.md  schedulingModule.cpp  schedulingModule.hpp
problem-solver/cxx/scheduling-module/agents/: importStaffAgent.cpp  importStaffAgent.hpp  scheduleBuilderAgent.cpp  scheduleBuilderAgent.hpp
problem-solver/cxx/scheduling-module/input/csv/: example.csv
problem-solver/cxx/scheduling-module/keynodes/: scheduling-keynodes.hpp
problem-solver/cxx/scheduling-module/test/: CMakeLists.txt
problem-solver/cxx/scheduling-module/test/units/: importStaffAgentTest.cpp  scheduleBuilderAgentTest.cpp
problem-solver/cxx/scheduling-module/test/utils/: TestUtils.cpp  TestUtils.hpp
problem-solver/cxx/scheduling-module/utils/: stringFormatter.cpp  stringFormatter.hpp
(+37 files in other folders)
